[gd_scene load_steps=2 format=3 uid="uid://bfvari6v3chjb"]

[ext_resource type="Script" path="res://scripts/inventory_popup.gd" id="1_oktp0"]

[node name="InventoryPopup" type="Control"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_oktp0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="KeyTab" type="VBoxContainer" parent="Panel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="BattleTab" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Close" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Close"

[connection signal="pressed" from="Panel/Close" to="." method="_on_Close_pressed"]
